@@ -1,7 +1,8 @@
 # last modified 11 December 2006 by J. Fox
 # last modified 16 December 2009 by M. Friendly
 # last modified  2 January 2010 by M. Friendly: export cross3d
-export(heplot, heplot3d, heplot1d, ellipse3d.axes, mark.H0, cross3d, statList, covList, colMeansList)
+# last modified 27 January 2010 by M. Friendly: export statList etc
+export(heplot, heplot3d, heplot1d, ellipse3d.axes, mark.H0, cross3d, statList, covList, colMeansList, arrow3d)
 S3method(heplot, mlm)
 S3method(heplot3d, mlm)
 S3method(pairs, mlm)
