@@ -82,7 +82,7 @@ heplot(mod, ...)
   	(a character string) to select the SSPE (E) matrix used in the HE plot. 
   	Hypothesis terms plotted include the \code{iterm} effect as well as all interactions
   	of \code{iterm} with \code{terms}.}
-  \item{markH0}{A logical value (or else a list of arguments to \code{mark.H0}) used to
+  \item{markH0}{A logical value (or else a list of arguments to \code{\link{mark.H0}}) used to
     draw cross-hairs and a point indicating the value of a point null hypothesis.
     The default is TRUE if \code{iterm} is non-NULL.}
   \item{manova}{optional \code{Anova.mlm} object for the model; if absent a
@@ -90,7 +90,7 @@ heplot(mod, ...)
     computation in repeated calls.}
   \item{size}{how to scale the hypothesis ellipse relative to the error
     ellipse; if \code{"evidence"}, the default, the scaling is done so that
-    a ``significant'' hypothesis ellipse extends outside of the error
+    a ``significant'' hypothesis ellipse at level \code{alpha} extends outside of the error
     ellipse; if \code{"effect.size"}, the hypothesis ellipse is on the same
     scale as the error ellipse.}  
   \item{level}{equivalent coverage of ellipse for normally-distributed
@@ -164,10 +164,16 @@ heplot(mod, ...)
    For repeated measure designs, where the response variables correspond to one or
    more variates observed under a within-subject design, between-subject effects 
    and within-subject effects must be plotted separately, because the error terms 
-   (E matrices) differ.  When you specify an intra-subject term (\code{iterm})
+   (E matrices) differ.  When you specify an intra-subject term (\code{iterm}),
    the analysis and HE plots
    amount to analysis of the matrix \bold{Y} of responses post-multiplied by a matrix 
    \bold{M} determined by the intra-subject design for that term.
+   
+    The related \code{\link[candisc]{candisc}} package provides functions for 
+    visualizing a multivariate linear model in a low-dimensional view via a
+    generalized canonical discriminant analyses.  \code{\link[candisc]{heplot.candisc}}
+    and \code{\link[candisc]{heplot3d.candisc}} provide a low-rank 2D (or 3D) view of the effects for  
+    a given term in the space of maximum discrimination.
 }
 
 \value{
@@ -200,8 +206,14 @@ Friendly, M. (2007).
 }
 
 \seealso{
-    \code{\link[car]{Anova}}, \code{\link[car]{linear.hypothesis}},
-    \code{\link{heplot3d}}, \code{\link{pairs.mlm}}.
+    \code{\link[car]{Anova}}, \code{\link[car]{linear.hypothesis}} for details on 
+    testing \code{mlm}s.
+    
+    \code{\link{heplot1d}}, \code{\link{heplot3d}}, \code{\link{pairs.mlm}}, \code{\link{mark.H0}} for other
+    HE plot functions.
+        
+  	\code{\link[candisc]{candisc}},   \code{\link[candisc]{heplot.candisc}} for views
+  	in canonical space.
 }
 
 \examples{
