@@ -89,6 +89,8 @@ Version 0.9-1 (2010-01-1)
  o Fixed bug with icontrasts
  o Added markH0 argument to heplot
  o Added label argument to mark.H0()
+ o Added arrow3d()
+ 
  
 
  
